# Cobolsnoooy-

./: README.md
lito/: README.md  pyproject.toml
lito/lito/: __init__.py
lito/lito/jd/: __init__.py  c.toml  config.py  gulpfile.js
lito/lito/jd/ayudante/: Celebridades.py  Interacciones.py  Juez.py
lito/lito/jd/datos/: Cambios.py  Consultas.py  Estatisticas.py  InteraccionPG.py  Pleyades.py  Reportes.py  RetencionesQ.py  Tableros.py  cortas.py
lito/lito/jd/logicas/: Cadena.py  Catastro.py  Declaraciones.py  Elecciones.py  Fotones.py  Futuro.py  Golden.py  Informe.py  Listado.py  Materiales.py  Providencias.py  Tramites.py  regraf.py  validacion_password.py
lito/lito/jd/model/: CadenaFachada.py  Tradicional.py
lito/lito/jd/router/: __init__.py  ro.py  ro_cadena_iva.py  ro_papeles.py  ro_sector_publico.py  ro_seguridad.py  ro_tablero.py
lito/lito/jd/static/css/: LXXicons.css  app.css  app.min.css  bootstrap.min.css  custom.css  icons.min.css
lito/lito/jd/static/js/: ajax.js  app.js  common.js  layout.js  plugins.js
lito/lito/jd/static/js/dev/: archivos.js  graficas.js  (+8 more)
lito/lito/jd/templates/dashboards/: dashboard-analytics.html  dashboard-crm.html  dashboard-crypto.html  dashboard-nft.html  dashboard-projects.html  index.html
lito/lito/jd/templates/layouts/: layouts-vertical.html
lito/lito/jd/templates/papeles/: informe-revision.html  sector-publico.html  tramites.html  validar-papeles.html
lito/lito/jd/templates/partials/: base.html  customizer.html  footer.html  sidebar.html  topbar.html
lito/lito/jd/templates/sector/: sector-publico.html
(+178 files in other folders)
